--- a/VUE/proyectoapivue/package.json
+++ b/VUE/proyectoapivue/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.4.0-beta.0",
     "axios": "^0.24.0",
     "core-js": "^3.19.1",
     "vue": "^2.6.11",
